fixed TestStaticValuesModification by adding a second iteration; 11 failing